[tool.poetry]
authors = ["Cody Fincher <cody.fincher@gmail.com>"]
description = "Opinionated template for integrating Litestar with a SPA"
documentation = "https://cofin.github.io/litestar-fullstack"
homepage = "https://github.com/cofin/litestar-fullstack"
license = "MIT"
maintainers = ["Cody Fincher <cody.fincher@gmail.com>"]
name = "app"
packages = [{include = "app", from = "src"}]
readme = "README.md"
repository = "https://github.com/cofin/litestar-fullstack"
version = "0.1.0"

[tool.poetry.scripts]
app = "litestar.__main__:run_cli"

[tool.poetry.plugins."litestar.commands"]
database = "app.cli:database_management_app"
run-all = "app.cli:run_all_app"
users = "app.cli:user_management_app"
worker = "app.cli:worker_management_app"

[tool.poetry.dependencies]
aiosql = "*"
asyncpg = "*"
greenlet = {version = ">=2.0.1", platform = "darwin"}
litestar = {git = "https://github.com/litestar-org/litestar.git", branch = "main", extras = ["jwt", 'cli', 'redis', 'jinja', 'sqlalchemy', 'structlog', 'pydantic']}
passlib = {version = "*", extras = ["argon2"]}
pydantic-settings = "*"
python = ">=3.10,<3.12"
python-dotenv = "*"
saq = "*"
sqlalchemy = ">=2.0.19"
uvicorn = {version = "*", extras = ['standard']}

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "*"
coverage = {extras = ["toml"], version = "*"}
cython = "*"
nodeenv = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-dotenv = "*"
pytest-mock = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
asyncpg-stubs = "*"
black = "*"
blacken-docs = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pylint-pydantic = "*"
ruff = '*'
slotscheck = "*"
types-click = "*"
types-passlib = "*"
types-python-jose = "*"
types-pyyaml = "*"
types-redis = "*"